@@ -37,6 +37,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #16038: CVE-2013-1752: ftplib: Limit amount of data read by
+  limiting the call to readline().  Original patch by Michał
+  Jastrzębski and Giampaolo Rodola.
+
 - Issue #19276: Fixed the wave module on 64-bit big-endian platforms.
 
 - Issue #18458: Prevent crashes with newer versions of libedit.  Its readline
